# pyetbd

./: .gitignore  LICENSE  README.md  dev-notes-12-23.md  exp_runner_test.py  experiment1.xlsx  experiments.json  gui.py  gui_main.py  json_input_key.json  main.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py  vim_cheatsheet.md
.github/workflows/: python-publish.yml
design_info/: plan.md
example_experiment_inputs/: example.json  mcdowell_et_al_2008_phase1.json  mcdowell_et_al_2008_phase2.json  mcdowell_et_al_2008_phase3.json  test.json
example_inputs/: mcdowell_et_al_2008_phase1.json  mcdowell_et_al_2008_phase2.json  mcdowell_et_al_2008_phase3.json  test.json
outputs/: example_experiment.csv  example_experiment.xlsx  experiment1.xlsx  fdf_20_mut_rate_0.005.xlsx  phase1.xlsx
pyETBD/: __init__.py  defaults.json  experiment_gui.py  experiment_handler.py  experiments.py  json_writer.py  organisms.py  schedules.py  test.py
pyETBD/algorithm/: __init__.py  mutation.py  recombination.py  selection.py
pyETBD/organisms/: an_organism.py
pyETBD/schedules/: conc_ri.py  interval_schedule.py  schedule_runner.py
pyETBD/utils/: __init__.py  bin_converter.py  defaults.py  equations.py  timer.py  (+5 more)
pyetbd/: __init__.py  algorithm.py  data_saver.py  defaults.py  experiment.py  experiment_gui.py  experiment_runner.py  experiments.py  organisms.py  schedules.py  settings_classes.py
tests/: fdfs_test.py  fitness_calculation_test.py  mutation_test.py  organism_test.py  recombination_strat_test.py  recombination_test.py  schedules_test.py  selection_test.py
(+20 files in other folders)
